--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.properties.hibernate.format_sql=true
 spring.thymeleaf.cache=false
 
-spring.mvc.view.prefix = /WEB-INF/jsp/
-spring.mvc.view.suffix = .jsp
+spring.mvc.view.prefix = /WEB-INF/html/
+spring.mvc.view.suffix = .html
 
