--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
       <version>5.2.0.RELEASE</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-thymeleaf</artifactId>
+      <version>2.7.4</version>
+    </dependency>
+
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
